--- a/style.css
+++ b/style.css
@@ -261,24 +261,35 @@ header {
     justify-content: center;
     flex-wrap: wrap;
 
-  
+
 
 }
 
 .obj {
     text-transform: uppercase;
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-weight: bolder;
-    color: red;
-      padding: 20px 40px;
+    color: white;
+    padding: 20px 40px;
 }
-.obj>span{
+
+.obj>span {
+    /* padding: 10px 40px;
+    border-image: linear-gradient(90deg, #0682b3, red) 1;
+    border: 4px solid;
+    border-image: linear-gradient(90deg, #0682b3, red) 1;
+    border-radius: 12px; */
     padding: 10px 60px;
-    border-image: linear-gradient(90deg, #0682b3, red) 1;
-     border: 4px solid;
-    border-image: linear-gradient(90deg, #0682b3, red) 1;
-    border-radius: 12px;
+    border: 1px solid;
+    border-bottom-left-radius: 80px;
+    border-top-right-radius: 80px;
+    background: linear-gradient(135deg, #b80000, #ff3b3b);
+    color: white;
+
+
+
 }
+
 .object-text {
     width: 100%;
     text-align: center;
@@ -380,16 +391,13 @@ header {
 }
 
 .table-area {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: linear-gradient(145deg, #e6f4ff, #d0e8ff, #b3daff);
-    padding: 20px;
-    color: #084b83;
-    /* border: 1px solid #0682b3; */
-    border-top-left-radius: 30px;
-    border-bottom-right-radius: 30px;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  background: #e3f2ff;         /* suggested color */
+    padding: 25px 40px;
+    border-radius: 40px;
+    box-shadow: 0px 8px 20px rgba(0,0,0,0.12); 
+    color: #004a7c;               /* dark blue text */
+    font-weight: 600;
+    font-size: 18px;
 
 }
 
