--- a/style.css
+++ b/style.css
@@ -283,7 +283,7 @@ header {
     border: 1px solid;
     border-bottom-left-radius: 80px;
     border-top-right-radius: 80px;
-    background: linear-gradient(135deg, #b80000, #ff3b3b);
+    background: linear-gradient(45deg, #ff0000, #ff4d4d, #cc0000);
     color: white;
 
 
@@ -349,7 +349,6 @@ header {
 
 .bio-data-context {
     width: 100%;
-
     text-align: center;
 }
 
@@ -391,11 +390,13 @@ header {
 }
 
 .table-area {
-  background: #e3f2ff;         /* suggested color */
+    background: #e3f2ff;
+    /* suggested color */
     padding: 25px 40px;
     border-radius: 40px;
-    box-shadow: 0px 8px 20px rgba(0,0,0,0.12); 
-    color: #004a7c;               /* dark blue text */
+    box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.12);
+    color: #004a7c;
+    /* dark blue text */
     font-weight: 600;
     font-size: 18px;
 
